--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Practice makes perfect.
+title: Wings27 Blog
 SEOTitle: Wings27 Blog | Practice makes perfect.
 header-img: img/home-bg.jpg
 email: wenqs27@gmail.com
