--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Site settings
+name: wings27-blog
 title: Wings27 Blog
 SEOTitle: Wings27 Blog | Practice makes perfect.
 header-img: img/home-bg.jpg
