--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-_site
 node_modules
 .DS_Store
 */.DS_Store
 */*/.DS_Store
-*.sh
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
@@ -20,3 +18,9 @@ node_modules
 
 # IntelliJ
 /out/
+
+### Jekyll template
+_site/
+.sass-cache/
+.jekyll-metadata
+
