--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-    "name": "wings27-blog",
-    "title": "Wings27 Blog",
-    "version": "1.0.0",
-    "homepage": "http://wings27.github.io",
-    "author": "wings27",
-    "devDependencies": {
-        "grunt": "~0.4.5",
-        "grunt-contrib-less": "~0.11.4",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-banner": "~0.2.3",
-        "grunt-contrib-uglify": "~0.5.1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/wings27/wings27.github.io"
-    },
-    "scripts": {
-        "preview": "cd _site; python -m SimpleHTTPServer 8020",
-        "watch": "grunt watch & npm run preview & jekyll serve -w;",
-        "test": "grunt --verbose"
-    }
+  "name": "wings27-blog",
+  "title": "Wings27 Blog",
+  "version": "1.0.0",
+  "homepage": "http://wings27.github.io",
+  "author": "wings27",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-banner": "~0.2.3",
+    "grunt-contrib-less": "~0.11.4",
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-watch": "~0.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wings27/wings27.github.io"
+  },
+  "scripts": {
+    "preview": "cd _site; python -m SimpleHTTPServer 8020",
+    "watch": "grunt watch & npm run preview & jekyll serve -w;",
+    "test": "grunt --verbose"
+  }
 }
