--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Wings27 Blog
 SEOTitle: Wings27 Blog | Practice makes perfect.
 header-img: img/home-bg.jpg
 email: wenqs27@gmail.com
-description: ""
+description: "test"
 keyword: ""
 
 
