--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ node_js:
 before_install: npm install -g grunt-cli
 install: npm install
 script: bash ./deploy.sh
+
+cache:
+  directories:
+  - node_modules # NPM packages
