add baidu and google analysis.

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: wings27blog
+#disqus_username: wings27blog           # uncomment to use.
 
 # Duoshuo settings
 duoshuo_username: wings27blog
@@ -51,10 +51,10 @@ duoshuo_share: true                     # set to false if you want to use Commen
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+ba_track_id: 120193a1e238d1cf4ef681306cde929b
 # Google Analytics
-ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_track_id: 'UA-80662619-1'            # Format: UA-xxxxxx-xx
+ga_domain: wings27.github.io
 
 
 
