--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,9 @@ kramdown:
 # Disqus settings
 #disqus_username: wings27blog           # uncomment to use.
 
-# GitTalk settings
-gittalk_clientID: e5628fa1ccbd73e37aae           # uncomment to use.
-gittalk_clientSecret: da2e70105d96059f6ac9f0c20aafa0bfbd98f45e
+# gitalk settings
+gitalk_clientID: e5628fa1ccbd73e37aae           # uncomment to use.
+gitalk_clientSecret: da2e70105d96059f6ac9f0c20aafa0bfbd98f45e
 
 # Duoshuo settings
 # duoshuo_username: wings27blog
