--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
 - stable
 before_install: npm install -g grunt-cli
 install: npm install
-script: "./deploy.sh"
+script: "bash ./deploy.sh"
 cache:
   directories:
   - node_modules
