--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","*.sh","*.enc"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
-gems: [jekyll-paginate]
+plugins: 
+  - jekyll-paginate
 
 
 # Markdown settings
