--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ header-img: img/home-bg.jpg
 email: wenqs27@gmail.com
 description: "Practice makes perfect."
 keyword: "IT, Programmer, Blog, Wings27"
-url: "http://wings27.github.io"
+url: "https://wenqiushi.xyz"
 
 
 
