--- a/_data/comments/2020-03-15-v2r-websocket/entry1586679287035.yml
+++ b/_data/comments/2020-03-15-v2r-websocket/entry1586679287035.yml
@@ -1,5 +1,5 @@
 _id: ac3160f0-7c95-11ea-8715-1be1c6438d28
-name: asdfsdf
-email: email@gmail.com
-message: "@asdfsdf\r\n>楼主请问客户端配置能加上么？？\r\n------\r\n测试"
-date: 1586679287
+name: wings27
+email: wenqs27@gmail.com
+message: "@asdfsdf\r\n>楼主请问客户端配置能加上么？？\r\n\r\n可以参考这个：https://github.com/Hackl0us/SS-Rule-Snippet/blob/master/LAZY_RULES/clash.yaml"
+date: 1585234376
